sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:6: error: not found: value i
    placePlayer(i, 0);
                ^SelectBaseball:7: error: not found: value i
    placePlayer(i, 1); 
                ^SelectBaseball:22: error: type mismatch;
 found   : Int
 required: Boolean
      if (getPlayerColor(i, 0)) return (i, 0);
                        ^SelectBaseball:23: error: type mismatch;
 found   : Int
 required: Boolean
      if (getPlayerColor(i, 1)) return (i, 1);
                        ^SelectBaseball:20: error: type mismatch;
 found   : Unit
 required: (Integer, Integer)
  for (i <- 0 to getBasesAmount() - 1) {
         ^