sort.baseball.SelectBaseball.scala.code
override def run() {
  var n = getBasesAmount();
  var nextBaseToSort = 0;
  
  while (!isSorted()) {
    placePlayer(i, 0);
    placePlayer(i, 1); 
  }
}

def placePlayer(base:Integer, position:Integer) {
  if ((getPlayerColor(base, 0)) != base) {
      var (wrongBase, wrongPosition) = findPlayerToSort(base);
      move(base, position);
      move(wrongBase, wrongPosition);
    }
}

def findPlayerToSort(color:Integer) : (Integer, Integer) = {
  for (i <- 0 to getBasesAmount() - 1) {
    if (i != color) {
      if (getPlayerColor(i, 0)) return (i, 0);
      if (getPlayerColor(i, 1)) return (i, 1);
    }
  }
}